# stylus-debug-suite

./: .gitignore  Cargo.toml  LICENSE  README.md  adapter_errors.txt  build_error.txt  report.html  workspace_check_logs.txt  workspace_check_logs_2.txt  workspace_check_logs_3.txt  workspace_check_logs_4.txt  workspace_check_logs_5.txt  workspace_check_logs_6.txt  workspace_check_logs_7.txt  workspace_check_logs_8.txt  workspace_check_logs_9.txt
core-engine/debug-engine/: Cargo.toml
core-engine/debug-engine/src/: analysis.rs  lib.rs  main.rs  vm.rs
core-engine/gas-profiler/: Cargo.toml
core-engine/gas-profiler/src/: lib.rs
core-engine/model/: Cargo.toml
core-engine/model/src/: lib.rs
core-engine/test-runtime/: Cargo.toml
core-engine/test-runtime/src/: assertions.rs  lib.rs  main.rs
debug-adapter/: Cargo.toml  dap_in.txt  dap_out.txt  test_dap.sh
debug-adapter/src/: main.rs
demo-runner/: Cargo.toml
demo-runner/src/: main.rs  report.rs
docs/: architecture.md
examples/demo-contracts/: Demo.sol  demo-test.yml  vault.rs
migration-cli/: Cargo.toml
migration-cli/src/: main.rs  parse_solidity.js  patterns.rs
stylus-debug/: Cargo.toml
stylus-debug/src/: main.rs
stylus-debug/src/adapter/: mod.rs
stylus-debug/src/demo/: mod.rs  report.rs
stylus-debug/src/migrate/: mod.rs  patterns.rs
vscode-extension/src/: extension.ts  shims.d.ts
