[package]
name = "debug-adapter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stylus-dap"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
debug-engine = { path = "../core-engine/debug-engine" }
gas-profiler = { path = "../core-engine/gas-profiler" }


