[package]
name = "demo-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stylus-demo"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
engine-model = { path = "../core-engine/model" }
test-runtime = { path = "../core-engine/test-runtime" }
gas-profiler = { path = "../core-engine/gas-profiler" }


