[package]
name = "stylus-debug"
version = "0.1.0"
edition = "2021"
description = "A comprehensive debug and migration toolkit for Arbitrum Stylus (Rust-based smart contracts)."
license = "MIT"
authors = ["Stylus Debug Suite Developers"]
repository = "https://github.com/ILE-Labs/stylus-debug-suite"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
colored = { workspace = true }
indicatif = { workspace = true }
gimli = "0.27"
object = "0.30"

# Internal workspace references for modular logic
debug-engine = { path = "../core-engine/debug-engine" }
gas-profiler = { path = "../core-engine/gas-profiler" }
engine-model = { path = "../core-engine/model" }

# We'll pull in the main logic from other crates as modules or depend on them
# For now, let's keep it simple and depend on the library parts if we extract them.
# Or just copy the logic into modules here for a shared binary.
