[package]
name = "stylus-debug"
version = "0.1.1"
edition = "2021"
description = "A comprehensive debug and migration toolkit for Arbitrum Stylus (Rust-based smart contracts)."
license = "MIT"
authors = ["ILE Labs <contact@ilelabs.com>"]
repository = "https://github.com/ILE-Labs/stylus-debug-suite"
homepage = "https://github.com/ILE-Labs/stylus-debug-suite"
readme = "../README.md"
keywords = ["arbitrum", "stylus", "debug", "wasm", "smart-contracts"]
categories = ["command-line-utilities", "development-tools::debugging"]
exclude = ["tests/", "examples/"]
publish = true

[[bin]]
name = "stylus-debug"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
colored = { workspace = true }
indicatif = { workspace = true }
gimli = "0.27"
object = "0.30"

# Internal workspace crates
debug-engine = { version = "0.1.1", path = "../core-engine/debug-engine" }
gas-profiler = { version = "0.1.1", path = "../core-engine/gas-profiler" }
engine-model = { version = "0.1.1", path = "../core-engine/model" }
