[package]
name = "debug-engine"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core VM execution engine and security analyzer for Arbitrum Stylus smart contracts."
publish = true

[lib]
name = "debug_engine"
path = "src/lib.rs"

[[bin]]
name = "debug-engine-cli"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
wasmtime = "1.0"
gas-profiler = { version = "0.1.1", path = "../gas-profiler" }
engine-model = { version = "0.1.1", path = "../model" }
