[package]
name = "gas-profiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gas profiling and optimization analysis for Arbitrum Stylus smart contracts."
publish = true

[lib]
name = "gas_profiler"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
engine-model = { version = "0.1.0", path = "../model" }
